--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://propertycashflowapp.github.io/client/public/",
   "name": "roei-website",
   "version": "1.0.0",
   "description": "",
