--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://propertycashflowapp.github.io/client/public/",
+  "homepage" : "https://propertycashflowapp.github.io/",
   "name": "roei-website",
   "version": "1.0.0",
   "description": "",
